# phantom

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/phantom-cli/: Cargo.toml
crates/phantom-cli/src/: connection.rs  daemon_ctl.rs  main.rs  output.rs  pt.rs
crates/phantom-cli/src/commands/: batch.rs  cell.rs  cursor.rs  daemon.rs  kill.rs  list.rs  mod.rs  monitor.rs  output.rs  resize.rs  run.rs  screenshot.rs  scrollback.rs  send.rs  snapshot.rs  status.rs  wait.rs
crates/phantom-core/: Cargo.toml
crates/phantom-core/src/: exit_codes.rs  lib.rs  protocol.rs  render.rs  types.rs
crates/phantom-daemon/: Cargo.toml  build.rs
crates/phantom-daemon/src/: capture.rs  engine.rs  handler.rs  input.rs  lib.rs  listener.rs  main.rs  pty.rs  session.rs  wait.rs
crates/phantom-daemon/tests/: bash_tests.rs  less_tests.rs  vim_tests.rs
crates/phantom-daemon/tests/common/: mod.rs
crates/phantom-mcp/: Cargo.toml  README.md  build.rs
crates/phantom-mcp/docs/: demo.tape  demo_runner.py
crates/phantom-mcp/src/: lib.rs  main.rs  observer.rs  render.rs  server.rs  tmux.rs
crates/phantom-mcp/tests/: integration.rs
crates/phantom-test/: Cargo.toml
crates/phantom-test/examples/: runner.rs
crates/phantom-test/src/: builder.rs  error.rs  lib.rs  phantom.rs  runner.rs  screen.rs  send.rs  session.rs  tui.rs  wait.rs
crates/phantom-test/tests/: bash_tests.rs  less_tests.rs  vim_tests.rs
docs/: libghostty-sgr-crash.md
tests/: run.sh
