[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
authors = ["Alex Pasmantier <alex.pasmant@gmail.com>"]
repository = "https://github.com/alexpasmantier/phantom"
description = "Programmatically drive TUI applications"
keywords = ["tui", "terminal", "testing", "automation", "ghostty"]
categories = ["command-line-utilities", "development-tools::testing"]

[workspace.dependencies]
phantom-core = { path = "crates/phantom-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "io-util", "signal", "time"] }
clap = { version = "4", features = ["derive"] }
nix = { version = "0.30", features = ["term", "process", "signal", "fs"] }
mio = { version = "1", features = ["os-poll", "os-ext", "net"] }
crossbeam-channel = "0.5"
regex = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
