[package]
name = "phantom-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "phantom"
path = "src/main.rs"

[dependencies]
phantom-core.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["process"] }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
