[package]
name = "phantom-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
publish = false

[[bin]]
name = "phantom"
path = "src/main.rs"

[[bin]]
name = "pt"
path = "src/pt.rs"

[dependencies]
phantom-core.workspace = true
clap = { workspace = true, features = ["string"] }
clap_complete = "4"
tokio = { workspace = true, features = ["process"] }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ctrlc = "3"
