[package]
name = "phantom-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types and protocol for phantom"

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
anyhow.workspace = true
fontdue = { version = "0.9", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }

[features]
render = ["dep:fontdue", "dep:image"]
